cleaning
- separated routes from ```main.rs```
- converter modules cleaned by implementing ```impl From<struct>``` on the partner_xml structs
- swagger docs
