# rustopus/src/main.rs
@@ -7,6 +7,9 @@ mod o8_xml;
 
 mod partner_xml;
 
+mod routes;
+
+use actix_web::web::route;
 use actix_web::{get, post, web, App, HttpResponse, HttpServer, Responder};
 use actix_web::http::header;
 use actix_files::Files;
@@ -17,6 +20,13 @@ async fn not_found() -> impl Responder {
     HttpResponse::NotFound()
         .content_type("text/plain")
         .body("Page not found")
+}
+
+
+fn raise_read_instruction() -> HttpResponse {
+    HttpResponse::Ok()
+        .content_type("text/plain")
+        .body("Read index for instructions!")
 }
 
 
@@ -60,116 +70,6 @@ APIs
 }
 
 
-#[derive(Deserialize)]
-pub struct ProductRequest {
-    pub authcode: Option<String>,
-    pub url: Option<String>,
-    pub xmlns: Option<String>,
-}
-
-
-async fn products_handler(params: ProductRequest) -> impl Responder {
-    let authcode = match params.authcode {
-        Some(ref s) if !s.trim().is_empty() => s,
-        _ => return HttpResponse::Ok()
-                        .content_type("text/plain")
-                        .body("Read index for instructions!")
-    };
-
-    let url = match params.url {
-        Some(ref s) if !s.trim().is_empty() => s,
-        _ => return HttpResponse::Ok()
-                        .content_type("text/plain")
-                        .body("Read index for instructions!")
-    };
-
-    let mut xmlns = params.xmlns.unwrap_or_default();
-    if xmlns.trim().is_empty() && url.contains("/services/") {
-        if let Some(pos) = url.find("/services/") {
-            let end = pos + "/services/".len();
-            xmlns = url[..end].to_string();
-        }
-    }
-
-    let xml = converters::products::get_products(url, &xmlns, authcode, &soap::get_first_date()).await;
-
-    HttpResponse::Ok()
-        .content_type("application/xml")
-        .body(xml)
-}
-
-
-#[get("/get-products")]
-async fn get_products_handler(query: web::Query<ProductRequest>) -> impl Responder {
-    let params = query.into_inner();
-
-    products_handler(params).await
-}
-
-
-#[post("/get-products")]
-async fn post_products_handler(json: web::Json<ProductRequest>) -> impl Responder {
-    let params = json.into_inner();
-
-    products_handler(params).await
-}
-
-
-#[derive(Deserialize)]
-pub struct StockRequest {
-    pub authcode: Option<String>,
-    pub url: Option<String>,
-    pub xmlns: Option<String>,
-}
-
-
-async fn stocks_handler(params: StockRequest) -> impl Responder {
-    let authcode = match params.authcode {
-        Some(ref s) if !s.trim().is_empty() => s,
-        _ => return HttpResponse::Ok()
-                        .content_type("text/plain")
-                        .body("Read index for instructions!")
-    };
-
-    let url = match params.url {
-        Some(ref s) if !s.trim().is_empty() => s,
-        _ => return HttpResponse::Ok()
-                        .content_type("text/plain")
-                        .body("Read index for instructions!")
-    };
-
-    let mut xmlns = params.xmlns.unwrap_or_default();
-    if xmlns.trim().is_empty() &&url.contains("/services/") {
-        if let Some(pos) = url.find("/services/") {
-            let end = pos + "/services/".len();
-            xmlns = url[..end].to_string();
-        }
-    }
-
-    let xml = converters::stocks::get_stocks(url, &xmlns, authcode, &soap::get_first_date()).await;
-
-    HttpResponse::Ok()
-        .content_type("application/xml")
-        .body(xml)
-}
-
-
-#[get("/get-stocks")]
-async fn get_stocks_handler(query: web::Query<StockRequest>) -> impl Responder {
-    let params = query.into_inner();
-
-    stocks_handler(params).await
-}
-
-
-#[post("/get-stocks")]
-async fn post_stocks_handler(json: web::Json<StockRequest>) -> impl Responder {
-    let params = json.into_inner();
-
-    stocks_handler(params).await
-}
-
-
 #[actix_web::main]
 async fn main() -> std::io::Result<()> {
     let config = service::config::get_settings();
@@ -189,10 +89,12 @@ async fn main() -> std::io::Result<()> {
                 .index_file("index.html")
                 .use_last_modified(true))
             .default_service(web::to(not_found))
-            .service(get_products_handler)
-            .service(post_products_handler)
-            .service(get_stocks_handler)
-            .service(post_stocks_handler)
+            .service(routes::products::get_products_handler)
+            .service(routes::products::post_products_handler)
+            .service(routes::stocks::get_stocks_handler)
+            .service(routes::stocks::post_stocks_handler)
+            .service(routes::prices::get_prices_handler)
+            .service(routes::prices::post_prices_handler)
     })
     .bind((host, port))?
     .run()
